syntax = "proto3";

package protocol.Messaging.Request;

// GetChunksRequest определяет список необходимых чанков
message	GetChunksRequest {
    repeated int32 chunks = 1;
}